# web-server-static-pages

./: CMakeLists.txt  README.md  main.cpp  mime_types.cpp
data_root/: index.html
data_root/html/: fall_collection.html  first_shoe.html  latest_blog.html  showcase.html
data_root/styles/: style.css
dependencies/: config.cfg
includes/: config_parser.hpp  connection.hpp  connection_manager.hpp  errors.hpp  header.hpp  help_functions.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp
sources/: config_parser.cpp  connection.cpp  connection_manager.cpp  help_functions.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp  tcp_client.cpp
testing/: load-test.js  summary.html  summary_mt.html  wrk2-load-test-1.txt
